Fix for gradle build