@@ -1,32 +1,28 @@
 buildscript {
     dependencies {
         classpath "org.springframework.boot:spring-boot-gradle-plugin:3.3.0"
-        classpath "gradle.plugin.de.jansauer.printcoverage:printcoverage:2.0.0"
+        classpath "org.barfuin.gradle.jacocolog:gradle-jacoco-log:3.1.0"
     }
 }
 
 plugins {
     id 'org.springframework.boot' version '3.3.0'
     id 'io.spring.dependency-management' version '1.1.5'
-    id 'java'
-    id 'checkstyle'
+    id 'org.kordamp.gradle.build-info' version "0.54.0"
 }
+apply plugin: 'java'
 apply plugin: 'jacoco'
-apply plugin: 'de.jansauer.printcoverage'
+apply plugin: 'base'
+apply plugin: 'maven-publish'
+apply plugin: 'org.barfuin.gradle.jacocolog'
+apply plugin: 'checkstyle'
 apply from: 'jacoco.gradle'
 
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
 javadoc.options.encoding = 'UTF-8'
 check.dependsOn javadoc
-
-checkstyle {
-    toolVersion = "10.12.4"
-    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
-}
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '21'
-targetCompatibility = '21'
+checkstyle.toolVersion = '8.36.2'
 
 repositories {
     mavenCentral()
@@ -49,7 +45,18 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-tasks.named('test') {
+test {
+    testLogging{
+        exceptionFormat='full'
+    }
 	useJUnitPlatform()
-    finalizedBy jacocoTestReport, jacocoTestCoverageVerification, printCoverage
+    finalizedBy jacocoTestReport, jacocoTestCoverageVerification
+    jvmArgs("--add-opens=java.base/java.time=ALL-UNNAMED")
+}
+
+tasks.withType(Checkstyle) {
+    reports {
+        xml.required.set(true)
+        html.required.set(true)
+    }
 }
